@@ -62,15 +62,17 @@
 \newcommand{\bash}           {\textit{Bash}}
 \newcommand{\debian}         {\textit{Debian GNU/Linux}}
 \newcommand{\fpgasetup}      {\textit{fpga\_setup}}
+\newcommand{\fpgawizard}     {\textit{fpga\_wizard}}
 \newcommand{\fpgasynt}       {\textit{fpga\_synt}}
 \newcommand{\fpgaprog}       {\textit{fpga\_prog}}
+\newcommand{\fpgadeps}       {\textit{fpga\_deps}}
 \newcommand{\console}        {\textit{console}}
 \newcommand{\makefile}       {\textit{Makefile}}
 
 \newcommand{\shellcmd}[1]{\\\indent\indent\texttt{\scriptsize #1}\\}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title[FPGA Helpers]{Tutorial: FPGA Helpers v0.1.1}
+\title[FPGA Helpers]{Tutorial: FPGA Helpers v0.3.0}
 
 \author{
   Rodrigo A. Melo\\
@@ -90,7 +92,8 @@
 
 \begin{frame}{FPGA Helpers}
   \begin{exampleblock}{What is this?}
-    A bunch of scripts to use FPGA development tools in a vendor independent way.
+    A Free Software project which consist on a bunch of scripts which helps to use FPGA development
+    tools in a vendor independent way.
   \end{exampleblock}
   \begin{block}{Development}
     \python\ and \bash\ scripts over \debian.
@@ -99,10 +102,11 @@
 
 \begin{frame}{Current components}
   \begin{itemize}
-    \item \textbf{\fpgasetup:} used to set the system to execute the tools of the vendors.
-    \item \textbf{\fpgasynt:} generates a Makefile and two TCL files, which are used to
-      configure and execute a synthesis project.
-    \item \textbf{\fpgaprog:} used to transfer a bitstream to a FPGA or memory.
+    \item \textbf{\fpgasetup:} set the system to execute the vendor's tool.
+    \item \textbf{\fpgawizard:} generates options.tcl and Makefile (project files).
+    \item \textbf{\fpgasynt:} run synthesis based on the project file of the vendor's tool.
+    \item \textbf{\fpgaprog:} transfer a bitstream to a FPGA or memory.
+    \item \textbf{\fpgadeps:} collect HDL files of the project [WIP].
   \end{itemize}
 \end{frame}
 
@@ -111,31 +115,17 @@
 \section{FPGA Setup}
 
 \begin{frame}[fragile]{FPGA Setup (I)}
-  \begin{columns}
-    \column{0.75\textwidth}
-      \begin{block}{}
-        \small
-        \fpgaprog\ and the \makefile\ generated by \fpgasynt\ uses vendors tools.
-        They assumes that are well installed and configured (license) and the
-        binaries must be in the system path. It could be done manually,
-        automated in for example \textit{.bashrc} or using \fpgasetup.
-      \end{block}{}
-    \column{0.25\textwidth}
-      \small Supported tools:
-      \begin{itemize}
-        \tiny
-        \item Xilinx ISE
-        \item Xilinx Vivado
-        \item Altera Quartus2
-        \item Microsemi Libero-SoC
-      \end{itemize}
-  \end{columns}
+  \begin{block}{}
+    The \makefile\ which run the Tcl scripts for synthesis and programming assumes that the
+    vendor's tool is well configured and available in the system path.
+    It could be done manually, automated in for example \textit{.bashrc} or using \fpgasetup.
+  \end{block}{}
   \scriptsize
   \verbatiminput{temp/fpgasetup1.txt}
 \end{frame}
 
 \begin{frame}[fragile]{FPGA Setup (II)}
-  It can run interactively:
+  It also can be run interactively:
   \scriptsize
   \verbatiminput{temp/fpgasetup2.txt}
   \normalsize
@@ -148,136 +138,186 @@
   \end{itemize}
 \end{frame}
 
+%% FPGA Wizard %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{FPGA Wizard}
+
+\begin{frame}[fragile]{FPGA Wizard (I)}
+  \begin{block}{}
+    Generates options.tcl and Makefile (project files).
+  \end{block}{}
+  \tiny
+  \begin{verbatim}
+$ fpga_wizard.py 
+fpga_wizard is a member of FPGA Helpers v0.3.0
+
+Select TOOL to use [vivado]
+EMPTY for default option. TAB for autocomplete. Your selection here > 
+
+Where to get (if exists) or put Tcl files? [../tcl]
+EMPTY for default option. TAB for autocomplete. Your selection here > project
+
+Top Level file? [None]
+EMPTY for default option. TAB for autocomplete. Your selection here > top_file.vhdl
+
+Add files to the project (EMPTY to FINISH):
+* Path to the file [FINISH]:
+EMPTY for default option. TAB for autocomplete. Your selection here > core_file.vhdl
+* In library [None]:
+EMPTY for default option. TAB for autocomplete. Your selection here > LIB_NAME
+* Path to the file [FINISH]:
+EMPTY for default option. TAB for autocomplete. Your selection here > package_file.vhdl
+* In library [None]:
+EMPTY for default option. TAB for autocomplete. Your selection here > LIB_NAME
+* Path to the file [FINISH]:
+EMPTY for default option. TAB for autocomplete. Your selection here > 
+
+Board to be used? [None]
+EMPTY for default option. TAB for autocomplete. Your selection here > 
+  \end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]{FPGA Wizard (II)}
+  \tiny
+  \begin{verbatim}
+Specify the used FPGA [UNKNOWN]
+EMPTY for default option. TAB for autocomplete. Your selection here > XC6SLX9-2-CSG324
+
+Specify the FPGA position [1]
+EMPTY for default option. TAB for autocomplete. Your selection here > 
+
+Specify an attached SPI [None]
+EMPTY for default option. TAB for autocomplete. Your selection here > 
+
+Specify an attached BPI [None]
+EMPTY for default option. TAB for autocomplete. Your selection here > 
+
+fpga_wizard (INFO): directory project was created
+fpga_wizard (INFO): Makefile was copy to project
+fpga_wizard (INFO): synthesis.tcl was copy to project
+fpga_wizard (INFO): programming.tcl was copy to project
+fpga_wizard (INFO): Makefile and options.tcl were generated
+  \end{verbatim}
+  \begin{columns}
+    \column{0.5\textwidth}
+      options.tcl
+      \begin{verbatim}
+set fpga_name XC6SLX9-2-CSG324
+set fpga_pos  1
+
+fpga_device   $fpga_name
+
+fpga_file     core_file.vhdl    -lib LIB_NAME
+fpga_file     package_file.vhdl -lib LIB_NAME
+fpga_file     top_file.vhdl     -top TOP_NAME
+      \end{verbatim}
+    \column{0.5\textwidth}
+      Makefile
+      \begin{verbatim}
+#!/usr/bin/make
+#Generated with fpga_wizard v0.3.0
+
+TOOL    = vivado
+TCLPATH = project
+include $(TCLPATH)/Makefile
+      \end{verbatim}
+  \end{columns}
+\end{frame}
+
 %% FPGA Synt %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{FPGA Synt}
 
 \begin{frame}[fragile]{FPGA Synt (I)}
-  \begin{columns}
-    \column{0.75\textwidth}
-      \begin{block}{}
-        \small
-        It generates a \makefile\ a TCL file for options and one or more TCL files
-        with vendor specific commands to run the synthesis process.
-      \end{block}{}
-    \column{0.25\textwidth}
-      \small Supported tools:
-      \begin{itemize}
-        \tiny
-        \item Xilinx ISE
-        \item Xilinx Vivado
-        \item Altera Quartus2
-      \end{itemize}
-  \end{columns}
+  \begin{block}{}
+    You can make a project using the vendor's tool GUI, and after that, use FPGA Synt to run
+    synthesis, implementation and bitstream generation.
+  \end{block}{}
   \scriptsize
   \verbatiminput{temp/fpgasynt.txt}
 \end{frame}
 
-\begin{frame}[fragile]{FPGA Synt (II) - Examples}
-  \small
-  \verbatiminput{temp/fpgasynt_ex1.txt}
-  \verbatiminput{temp/fpgasynt_ex2.txt}
-\end{frame}
+%\begin{frame}[fragile]{FPGA Synt (II) - Examples}
+%  \small
+%  \verbatiminput{temp/fpgasynt_ex1.txt}
+%  \verbatiminput{temp/fpgasynt_ex2.txt}
+%\end{frame}
 
-\begin{frame}[fragile]{FPGA Synt (III) - Makefile}
-  \tiny
-  \verbatiminput{temp/makefile.txt}
-  \begin{alertblock}{}
-    \small
-    The \makefile\ uses vendors tools, so you could run \fpgasetup\ when open
-    a new \console.
-  \end{alertblock}
-\end{frame}
+%\begin{frame}[fragile]{FPGA Synt (III) - Makefile}
+%  \tiny
+%  \verbatiminput{temp/makefile.txt}
+%  \begin{alertblock}{}
+%    \small
+%    The \makefile\ uses vendors tools, so you could run \fpgasetup\ when open
+%    a new \console.
+%  \end{alertblock}
+%\end{frame}
 
-\begin{frame}[fragile]{FPGA Synt (IV) - options.tcl}
-  \tiny
-  \verbatiminput{temp/options.txt}
-\end{frame}
-
-\begin{frame}[fragile]{FPGA Synt (V) - vendors TCL files}
-  %\tiny
-  \begin{itemize}
-    \item The commands \textit{fpga\_device} and \textit{fpga\_file}, as well
-          as the value \textit{\$FPGA\_TOOL} are implemented in each vendor TCL
-          file.
-    \item If a project file exists, it is used and options.tcl is omitted.
-          The name of the project file must be different of the tool name
-          (it is used by the vendors TCL files).
-    \item Vendors TCL files generates log files called
-          TOOLNAME-OPERATION-OPTIMIZATION.log, where OPERATION could be syn or
-          imp and OPTIMIZATION could be user, area, power and speed.
-          Examples are \textit{ise-syn-area.log} and \textit{quartus2-imp-speed.log}.
-  \end{itemize}
-\end{frame}
+%\begin{frame}[fragile]{FPGA Synt (V) - vendors TCL files}
+%  %\tiny
+%  \begin{itemize}
+%    \item The commands \textit{fpga\_device} and \textit{fpga\_file}, as well
+%          as the value \textit{\$FPGA\_TOOL} are implemented in each vendor TCL
+%          file.
+%    \item If a project file exists, it is used and options.tcl is omitted.
+%          The name of the project file must be different of the tool name
+%          (it is used by the vendors TCL files).
+%    \item Vendors TCL files generates log files called
+%          TOOLNAME-OPERATION-OPTIMIZATION.log, where OPERATION could be syn or
+%          imp and OPTIMIZATION could be user, area, power and speed.
+%          Examples are \textit{ise-syn-area.log} and \textit{quartus2-imp-speed.log}.
+%  \end{itemize}
+%\end{frame}
 
 %% FPGA Prog %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{FPGA Prog}
 
 \begin{frame}[fragile]{FPGA Prog (I)}
-  \begin{columns}
-    \column{0.75\textwidth}
-      \begin{block}{}
-        \small
-        Program to transfer a bitstream to the desired (supported) device.
-      \end{block}{}
-    \column{0.25\textwidth}
-      \small Supported tools:
-      \begin{itemize}
-        \tiny
-        \item Xilinx ISE (\textcolor{teal}{FPGA}, \textcolor{teal}{SPI}, \textcolor{teal}{BPI}, \textcolor{teal}{One XCF})
-        \item Altera Quartus2 (\textcolor{teal}{FPGA})
-      \end{itemize}
-  \end{columns}
-  \tiny
+  \begin{block}{}
+    If you have a bistream, FPGA Prog can be used to transfer it to a FPGA or memory.
+  \end{block}{}
+  \scriptsize
   \begin{verbatim}
 $ fpga_prog --help
-usage: fpga_prog [-h] [-v] [-t TOOLNAME] [-d DEVICE] [-p POSITION]
-                    [-m MEMNAME] [-w WIDTH] [-b BOARDNAME|BOARDFILE]
-                    BITSTREAM
+usage: fpga_prog [-h] [-v] [-t TOOL] [-d DEVICE] [-b BOARDNAME] [-m MEMNAME]
+                 [-p POSITION] [-w WIDTH]
+                 [BITSTREAM]
 
 Transfers a BitStream to a device.
 
 positional arguments:
-  BITSTREAM             BitStream to be transferred
+  BITSTREAM             bitstream to be transferred
 
 optional arguments:
   -h, --help            show this help message and exit
   -v, --version         show program's version number and exit
-  -t TOOLNAME, --tool TOOLNAME
-                        Name of the vendor tool to be used [ise |quartus2]
+  -t TOOL, --tool TOOL  name of the vendor tool to be used
+                        (ise|quartus|libero|vivado) [vivado]
   \end{verbatim}
 \end{frame}
 
 \begin{frame}[fragile]{FPGA Prog (II)}
-  \tiny
+  \scriptsize
   \begin{verbatim}
-device arguments:
   -d DEVICE, --device DEVICE
-                        Type of the target device
-                        [fpga(default)|spi|bpi|xcf|detect|unlock]
+                        type of the target device
+                        (fpga|spi|bpi|xcf|detect|unlock) [fpga]
+  -b BOARDNAME, --board BOARDNAME
+                        name of a supported board (note: if you use the board
+                        option, -p, -m and -w will be overwritten) [None]
+  -m MEMNAME, --memname MEMNAME
+                        name of the memory target device [UNDEFINED]
   -p POSITION, --position POSITION
                         positive number which represents the POSITION of the
                         device in the JTAG chain [1]
-  -m MEMNAME, --memname MEMNAME
-                        Name of the target memory (when applicable)
-                        [UNDEFINED]
   -w WIDTH, --width WIDTH
                         positive number which representes the WIDTH of bits of
-                        the target memory (when applicable) [1]
-  -b BOARDNAME|BOARDFILE, --board BOARDNAME|BOARDFILE
-                        Name of a supported board or file (.yaml) of a
-                        new/custom board (note: if you use the board option,
-                        -p, -m, -w and -t will be overwritten) []
+                        the target memory (1, 2, 4, 8, 16, 32, 64) [1]
 
-Supported boards: avnet_s6micro, digilent_atlys, gaisler_xc6s,
-terasic_de0nano, xilinx_sp601
+Supported boards: xilinx_ml605, microsemi_m2s090ts, gaisler_xc6s,
+xilinx_sp601, avnet_s6micro, digilent_atlys, terasic_de0nano
   \end{verbatim}
-  \begin{alertblock}{}
-    \small
-    \fpgaprog\ uses vendors tools, so you could run \fpgasetup\ when a new
-    \console\ is opened.
-  \end{alertblock}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
